# DraftClaw

./: .env.example  .gitignore  README.md  README.zh-CN.md  document_parser.py  mode_result.html  pyproject.toml  start_draftclaw_web.py
draftclaw/: __init__.py  bbox_locator.py  chunker.py  cli.py  config.py  config_validator.py  env_utils.py  issue_review.py  logger.py  main.py  pdf_annotation_exporter.py  pdf_page_renderer.py  pdf_parser.py  pdf_screenshot.py  prompt_loader.py  report_export_renderer.py  report_renderer.py  requirements.txt
draftclaw/agents/: __init__.py  explore_agent.py  language_switch_agent.py  llm_utils.py  plan_agent.py  recheck_agent.py  search_agent.py  summary_agent.py  vision_agent.py
draftclaw/prompts/: language_switch_prompt.md  plan_prompt.md  recheck_text_prompt.md  summary_prompt.md  vision_prompt.md
draftclaw/prompts/explore/: global_finalize_prompt.md  global_initial_prompt.md  local_finalize_prompt.md  local_initial_prompt.md  merge_prompt.md
draftclaw/prompts/search/: intent_prompt.md  organize_results_prompt.md
draftclaw/web/: api.py  app.py  requirements_web.txt  tasks.py
draftclaw/web/static/: app.css  app.js
draftclaw/web/templates/: index.html
src/draftclaw/: __init__.py  _resources.py  api.py  app.py  cli.py  parser.py  settings.py
src/draftclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/draftclaw/_core/: config.py  contracts.py  enums.py  exceptions.py  runtime_validation.py
src/draftclaw/_history/: __init__.py  store.py  trace.py
src/draftclaw/_io/: __init__.py  docling_parser.py
src/draftclaw/_llm/: __init__.py  cache.py  client.py  runner.py
src/draftclaw/_modes/: __init__.py  deep.py  fast.py  standard.py
src/draftclaw/_postprocess/: __init__.py  dedup.py  finalize.py  reconcile.py
src/draftclaw/_prompts/: __init__.py  builder.py
src/draftclaw/_runtime/: __init__.py  paragraph_chunker.py  pdf_versions.py  progress.py  service.py
src/draftclaw/resources/configs/: default.yaml
src/draftclaw/resources/prompts/modes/: deep_execute_round.md  deep_plan_round.md  deep_validate_round.md  fast_low_level_review.md  fast_review.md  standard_low_level_round.md  standard_merge.md  standard_round.md
src/draftclaw/resources/prompts/system/: base_guardrails.md  error_merge_json_contract.md  json_only_contract.md  low_level_quality_guardrails.md
src/draftclaw/web/: __init__.py  app.py  cli.py  manager.py  models.py  store.py  worker.py
src/draftclaw/web/static/: app.css  app.js
src/draftclaw/web/templates/: dashboard.html
tests/: test_cli.py  test_config_loading.py  test_docling_parser.py  test_final_outputs.py  test_modes.py  test_package_resources.py  test_paragraph_chunker.py  test_pdf_versions.py  test_prompt_workflow.py  test_public_client_api.py  test_public_parser_api.py  test_web.py
